Fix major bugs in SP annotation task